...
                if formStore.forms.isEmpty {
                    EmptyStateView()
                } else {
                    FormsList(formToEdit: $formToEdit)
                }
            }
            .navigationTitle("Kata Dōshi")
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    Button {
                        showingNewFormEditor = true
                    } label: {
                        Image(systemName: "plus")
                    }
                    .accessibilityLabel("Add Form")
                }
            }
            .sheet(isPresented: $showingNewFormEditor) {
                NavigationStack {
                    FormEditorView(mode: .create)
                        .environment(formStore)
...
                        Label("Delete", systemImage: "trash")
                    }

                    Button {
                        formToEdit = form
                    } label: {
                        Label("Edit", systemImage: "pencil")
                    }
                    .tint(.blue)
                }
                .contextMenu {
                    Button(role: .destructive) {
                        try? formStore.deleteForm(id: form.id)
...
